serde_with_macros/tests/compile-fail/serde_as.stderr
error: Cannot combine `as` with `deserialize_as`. Use `serialize_as` to specify different serialization code.
 --> tests/compile-fail/serde_as.rs:8:5
  |
8 |     #[serde_as(as = "_", deserialize_as = "_")]
  |     ^

error: Cannot combine `as` with `serialize_as`. Use `deserialize_as` to specify different deserialization code.
  --> tests/compile-fail/serde_as.rs:10:5
   |
10 |     #[serde_as(as = "_", serialize_as = "_")]
   |     ^

error: Cannot combine `as` with `deserialize_as`. Use `serialize_as` to specify different serialization code.
  --> tests/compile-fail/serde_as.rs:12:5
   |
12 |     #[serde_as(as = "_", deserialize_as = "_", serialize_as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:20:5
   |
20 |     #[serde_as(as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:23:5
   |
23 |     #[serde_as(as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:26:5
   |
26 |     #[serde_as(as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:30:5
   |
30 |     #[serde_as(deserialize_as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:33:5
   |
33 |     #[serde_as(deserialize_as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:36:5
   |
36 |     #[serde_as(deserialize_as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:40:5
   |
40 |     #[serde_as(serialize_as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:43:5
   |
43 |     #[serde_as(serialize_as = "_")]
   |     ^

error: Cannot combine `serde_as` with serde's `with`, `deserialize_with`, or `serialize_with`.
  --> tests/compile-fail/serde_as.rs:46:5
   |
46 |     #[serde_as(serialize_as = "_")]
   |     ^

error: Unknown field: `does_not_exist`
  --> tests/compile-fail/serde_as.rs:57:16
   |
57 |     #[serde_as(does_not_exist = "123")]
   |                ^^^^^^^^^^^^^^

error: Unknown field: `unknwn1`
  --> tests/compile-fail/serde_as.rs:59:16
   |
59 |     #[serde_as(unknwn1 = "Hello", unknw2 = "World")]
   |                ^^^^^^^

error: Unknown field: `unknw2`
  --> tests/compile-fail/serde_as.rs:59:35
   |
59 |     #[serde_as(unknwn1 = "Hello", unknw2 = "World")]
   |                                   ^^^^^^

error: Unknown literal value `123`
  --> tests/compile-fail/serde_as.rs:67:31
   |
67 |     #[serde_as(serialize_as = "123", deserialize_as = DisplayFromStr)]
   |                               ^^^^^

error: Unexpected literal type `path`
  --> tests/compile-fail/serde_as.rs:67:55
   |
67 |     #[serde_as(serialize_as = "123", deserialize_as = DisplayFromStr)]
   |                                                       ^^^^^^^^^^^^^^

error: An empty `serde_as` attribute on a field has no effect. You are missing an `as`, `serialize_as`, or `deserialize_as` parameter.
  --> tests/compile-fail/serde_as.rs:69:5
   |
69 |     #[serde_as]
   |     ^

error: An empty `serde_as` attribute on a field has no effect. You are missing an `as`, `serialize_as`, or `deserialize_as` parameter.
  --> tests/compile-fail/serde_as.rs:71:5
   |
71 |     #[serde_as()]
   |     ^
